--- a/vambora/composer.json
+++ b/vambora/composer.json
@@ -6,10 +6,11 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "bestmomo/scafold": "dev-master",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "bestmomo/scafold": "dev-master"
+        "prettus/l5-repository": "^2.6"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
